--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/github_mark_black_120px"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/github_mark_black_120px"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GithubUser">
+        android:theme="@style/Theme.GithubUser"
+        android:fullBackupContent="@xml/backup_descriptor">
         <activity android:name=".DetailActivity"
             android:theme="@style/Theme.Design.Light.NoActionBar"/>
         <activity
