--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,16 +4,21 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@drawable/github_mark_black_120px"
         android:label="@string/app_name"
         android:roundIcon="@drawable/github_mark_black_120px"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GithubUser"
-        android:fullBackupContent="@xml/backup_descriptor">
-        <activity android:name=".ui.detail.DetailActivity"
-            android:theme="@style/Theme.Design.Light.NoActionBar"/>
+        android:theme="@style/Theme.GithubUser">
+        <activity
+            android:name=".ui.detail.DetailActivity"
+            android:theme="@style/Theme.Design.Light.NoActionBar" />
         <activity
             android:name=".ui.splash.SplashActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Design.Light.NoActionBar" />
+        <activity
+            android:name=".ui.MainActivity"
             android:theme="@style/Theme.Design.Light.NoActionBar"
             android:exported="true">
             <intent-filter>
@@ -22,9 +27,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.home.MainActivity"
-            android:theme="@style/Theme.Design.Light.NoActionBar" />
     </application>
 
 </manifest>
