--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+#API KEY
+GithubUserApi = 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
