--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ def STRING = 'String'
 def GITHUBUSER_API_KEY = '"' + GithubUserApi + '"' ?: '"Define your Github User Api Key!"'
 
 android {
+    //noinspection GradleCompatible
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
@@ -20,7 +21,7 @@ android {
     defaultConfig {
         applicationId "com.chessporg.githubuser"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -48,7 +49,9 @@ android {
 
 dependencies {
 
+    //noinspection GradleDependency
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    //noinspection GradleDependency
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -71,8 +74,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.2"
 
     // Coroutine
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
 
     // Fragment
     implementation "androidx.fragment:fragment-ktx:1.3.6"
@@ -90,5 +93,6 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.3.0'
 
     // LiveData
+    //noinspection GradleDependency
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
 }
